export interface ObraSocial {
  id: number;
  nombre: string;
  codigo: string;
  descripcion?: string;
}