@startuml
!pragma layout smetana
hide empty members

package "Personas" {
  abstract class Persona {
    - nombre: String
    - apellido: String
    - dni: String
  }

  class Medico {
    - matricula: String
  }

  class Paciente {
    - fechaNacimiento: Date
  }

  Persona <|-- Medico
  Persona <|-- Paciente
}

package "Centro de Atención" {
  class CentroAtencion {
    - nombre: String
    - direccion: String
    - localidad: String
    - telefono: String
    - coordenadas: Point
    + agregarConsultorio(consultorio: Consultorio)
  }

  class Consultorio {
    - numero: Integer
    - nombre: String
  }

  class Especialidad {
    - nombre: String
    - descripcion: String
  }

  CentroAtencion "1" --> "*" Consultorio
  CentroAtencion "*" --> "*" Especialidad 

class DisponibilidadMedico {
    +id: Long
    +diaSemana: String
    +horaInicio: Time
    +horaFin: Time
}

class StaffMedico {
    +id: Long
    +centro: CentroAtencion
    +medico: Medico
    +disponibilidad: List<DisponibilidadMedico>
}
}

CentroAtencion "1" -- "0..*" StaffMedico : tiene
Medico "1" -- "0..*" StaffMedico : pertenece a
StaffMedico "1" -- "0..*" DisponibilidadMedico : tiene

package "Obra Social" {
  class ObraSocial {
    - nombre: String
    - codigo: String
  }
}

package "Turno" {
  class Turno {
    - fecha: Date
    - horaInicio: Time
    - horaFin: Time
    - estado: EstadoTurno
    + confirmarTurno()
    + cancelarTurno()
  }

  enum EstadoTurno {
    PENDIENTE
    CONFIRMADO
    CANCELADO
  }

    class EsquemaTurno {
      - nombre: String
      - descripcion: String
      - horaInicio: Time
      - horaFin: Time
      - intervalo: Integer
    }

  Turno -- "1" Paciente
  Turno -- "1" Medico
  Turno -- "1" Consultorio
  Consultorio "1" -- "*" EsquemaTurno
}

Medico "1" -- "*" Turno
Paciente "1" -- "1" ObraSocial

' Nueva relación: Staff Médico
Medico "*" -- "*" CentroAtencion : Staff
Medico "*" --> "1" Especialidad

@enduml